Build scripts: adjust JVM args in generated vmoptions files
Test: N/A
Change-Id: Ie7351d928bd938e2555a70331b2f8467e3ea0849